--- a/Repeat.html
+++ b/Repeat.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Secret Map</title>
     <link rel="stylesheet" href="Repeat.css">
-    <link rel="stylesheet" href="FontAwesome/css/all.css">
+    <link rel="stylesheet" href="all.css">
 </head>
 <body>
     <header>
