--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Secret Map</title>
-    <link rel="stylesheet" href="Repeat.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="all.css">
 </head>
 <body>
